--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# adding practice folder
+Practice
+
+# adding .DS_Store
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
